k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-portal
  labels:
    name: job-portal
